--- a/index.html
+++ b/index.html
@@ -46,6 +46,29 @@
         </div>
     </nav>
 
+    <!-- =====Sales===== -->
+    <section class="sales">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <img src="assets/images/banner.png" alt="Gambria">
+                </div>
+                <div class="col-lg-6 col-12 copywriting">
+                    <h1 class="header">Always Connected <br>No lagging.</h1>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi aliquid, optio voluptas tempora autem magni. Laboriosam nam dolorum cupiditate voluptas.</p>
+                    <p class="buttons">
+                        <a href="" class="btn btn-primary me-2">
+                            See Pricing
+                        </a>
+                        <a href="" class="btn btn-secondary">
+                            Testimonials
+                        </a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- =====Bootstrap Js===== -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
