sass extend dan merapihkan sales section

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <section class="sales">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-7 col-12 ps-5">
                     <img src="assets/images/banner.png" alt="Gambria">
                 </div>
-                <div class="col-lg-6 col-12 copywriting">
-                    <h1 class="header">Always Connected <br>No lagging.</h1>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi aliquid, optio voluptas tempora autem magni. Laboriosam nam dolorum cupiditate voluptas.</p>
+                <div class="col-lg-5 col-12 copywriting">
+                    <h1 class="header">Always Connected.<br>No lagging.</h1>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Eligendi aliquid, <br> optio voluptas tempora autem magni. <br> Laboriosam nam dolorum cupiditate voluptas.</p>
                     <p class="buttons">
                         <a href="" class="btn btn-primary me-2">
                             See Pricing
