--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                     </p>
                 </div>
             </div>
+            <div class="row mt-5">
+                <div class="col-lg-12 col-12 text-center">
+                    <img src="/assets/images/brands.png" class="brands-logo" alt="brands">
+                </div>
+            </div>
         </div>
     </section>
 
