--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                        <a class="nav-link" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Stories</a>
@@ -69,6 +69,17 @@
             <div class="row mt-5">
                 <div class="col-lg-12 col-12 text-center">
                     <img src="/assets/images/brands.png" class="brands-logo" alt="brands">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="pricing" id="pricing">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-12 text-center">
+                    <h1 class="header">Easy Budget.</h1>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
                 </div>
             </div>
         </div>
