--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 </div>
                 <div class="col-lg-5 col-12 copywriting">
                     <h1 class="header">Always Connected.<br>No lagging.</h1>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Eligendi aliquid, <br> optio voluptas tempora autem magni. <br> Laboriosam nam dolorum cupiditate voluptas.</p>
+                    <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Eligendi
+                        aliquid, <br> optio voluptas tempora autem magni. <br> Laboriosam nam dolorum cupiditate
+                        voluptas.</p>
                     <p class="buttons">
                         <a href="" class="btn btn-primary me-2">
                             See Pricing
@@ -80,6 +82,30 @@
                 <div class="col-lg-12 col-12 text-center">
                     <h1 class="header">Easy Budget.</h1>
                     <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-12">
+                    <div class="master-card basic-card">
+                        <h5>Basic</h5>
+                        <h1>$50,000</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
+                        <div class="item-benefit">
+                            <img src="assets/images/check-square.svg" alt="">
+                            <p>Live Server</p>
+                        </div>
+                        <div class="item-benefit">
+                            <img src="assets/images/check-square.svg" alt="">
+                            <p>10GB Storage</p>
+                        </div>
+                        <div class="item-benefit">
+                            <img src="assets/images/check-square.svg" alt="">
+                            <p>Basic Themes</p>
+                        </div>
+                        <a href="" class="btn btn-primary me-2">
+                            Start with this
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
