--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             <div class="row">
                 <div class="col-lg-4 col-12">
                     <div class="master-card basic-card">
-                        <h5>Basic</h5>
-                        <h1>$50,000</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
+                        <h5 class="name">Basic</h5>
+                        <h1 class="price">$50,000</h1>
+                        <p class="support">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
                         <div class="item-benefit">
                             <img src="assets/images/check-square.svg" alt="">
                             <p>Live Server</p>
