benefit basic cadr

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="master-card basic-card">
                         <h5 class="name">Basic</h5>
                         <h1 class="price">$50,000</h1>
-                        <p class="support">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
+                        <p class="support mb-5">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
                         <div class="item-benefit">
                             <img src="assets/images/check-square.svg" alt="">
                             <p>Live Server</p>
@@ -102,7 +102,7 @@
                             <img src="assets/images/check-square.svg" alt="">
                             <p>Basic Themes</p>
                         </div>
-                        <a href="" class="btn btn-primary me-2">
+                        <a href="" class="btn btn-primary mt-4 me-2">
                             Start with this
                         </a>
                     </div>
