--- a/index.html
+++ b/index.html
@@ -84,27 +84,61 @@
                     <p class="description">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit.</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-12">
-                    <div class="master-card basic-card">
-                        <h5 class="name">Basic</h5>
-                        <h1 class="price">$50,000</h1>
-                        <p class="support mb-5">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
-                        <div class="item-benefit">
-                            <img src="assets/images/check-square.svg" alt="">
-                            <p>Live Server</p>
+            <div class="row justify-content-center">
+                <div class="col-lg-10 col-12">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 col-12 mb-3">
+                            <div class="master-card basic-card">
+                                <h5 class="name">Basic</h5>
+                                <h1 class="price">$50,000</h1>
+                                <p class="support mb-5">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Live Server</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>10GB Storage</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Basic Themes</p>
+                                </div>
+                                <a href="" class="btn btn-primary mt-4 me-2">
+                                    Start with this
+                                </a>
+                            </div>
                         </div>
-                        <div class="item-benefit">
-                            <img src="assets/images/check-square.svg" alt="">
-                            <p>10GB Storage</p>
+                        <div class="col-lg-4 col-12">
+                            <div class="master-card most-card">
+                                <h5 class="name">Most Popular</h5>
+                                <h1 class="price">$288,000</h1>
+                                <p class="support mb-5">Lorem ipsum dolor sit amet consectetur <br> adipisicing elit. Provident.</p>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Live Server</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Unlimited Storage</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Unlock 1k Themes</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>Server Optimize</p>
+                                </div>
+                                <div class="item-benefit">
+                                    <img src="assets/images/check-square.svg" alt="">
+                                    <p>All Basic Features</p>
+                                </div>
+                                <a href="" class="btn btn-primary mt-4 me-2">
+                                    Choose this plans
+                                </a>
+                            </div>
                         </div>
-                        <div class="item-benefit">
-                            <img src="assets/images/check-square.svg" alt="">
-                            <p>Basic Themes</p>
-                        </div>
-                        <a href="" class="btn btn-primary mt-4 me-2">
-                            Start with this
-                        </a>
                     </div>
                 </div>
             </div>
